--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,6 +56,9 @@ steps:
 
 - task: WhiteSource@21
   displayName: 'Run WhiteSource Bolt'
+  inputs:
+    cwd: '$(System.DefaultWorkingDirectory)'
+    projectName: 'whiteSourceTrial19052021'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
